force-app/main/default/objects/Answer__c/Answer__c.object-meta.xml
<CustomObject>
    <description>Objeto responsável por armazenar as respostas dos usuários as perguntas feitas durante a visita.</description>
    
    <label>Resposta</label>
    <nameField>
        <displayFormat>RES-{00000}</displayFormat>
        <label>Nome</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Respostas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>