force-app/main/default/objects/Answer__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Respostas</relationshipLabel>
    <relationshipName>Respostas</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>