force-app/main/default/objects/Answer__c/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <description>Campo que armazena a resposta de livre preenchimento do usuário.</description>
    <inlineHelpText>Campo que armazena a resposta de livre preenchimento do usuário.</inlineHelpText>
    <label>Resposta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>