force-app/main/default/objects/Answer__c/fields/AnswerBoolean__c.field-meta.xml
<CustomField>
    <fullName>AnswerBoolean__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resposta Caixa de Seleção</label>
    <type>Checkbox</type>
</CustomField>