force-app/main/default/objects/Answer__c/fields/AnswerDate__c.field-meta.xml
<CustomField>
    <fullName>AnswerDate__c</fullName>
    <label>Resposta Data</label>
    <type>Date</type>
</CustomField>