force-app/main/default/objects/Answer__c/fields/EventRelated__c.field-meta.xml
<CustomField>
    <fullName>EventRelated__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>A resposta se relaciona ao Evento relacionado, que por sua vez se relaciona ao Evento (Visitas e atividades)</description>
    <label>Evento Relacionado</label>
    <referenceTo>EventRelated__c</referenceTo>
    <relationshipLabel>Respostas</relationshipLabel>
    <relationshipName>Respostas</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>